<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vagas Facil Uninorte</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="vaga_cancela">Vaga Com Cancela</string>
    <string name="vaga_sem_cancela">Vaga Sem Cancela</string>
    <string name="creditos">Projeto Conclusão de Curso - Diego, Marcio, Nelry</string>
    <string name="unidade1">Unidade 1</string>
    <string name="unidade2">Unidade 2</string>
    <string name="unidade3">Unidade 3</string>
    <string name="unidade4">Unidade 4</string>
    <string name="unidade6">Unidade 6</string>
    <string name="unidade7">Unidade 7</string>
    <string name="unidade8">Unidade 8</string>
    <string name="unidade9">Unidade 9</string>
    <string name="unidade10">Unidade 10</string>
    <string name="unidade11">Unidade 11</string>
    <string name="unidade12">Unidade 12</string>
    <string name="unidade13">Unidade 13</string>
    <string name="pergunta_inicial">Para Onde Você Quer Ir?</string>
    <string name="informacoes_ip">Insira acima o endereco IP do Servidor do Banco de Dados(Conforme Relatorio) e clique no botao ATUALIZAR</string>

</resources>
