<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_header_selector">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/marca_uninorte_2" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" 
        android:layout_weight="7">

        <Button
            android:id="@+id/U1"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade1" />

        <Button
            android:id="@+id/U2"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_toRightOf="@+id/U1"
            android:layout_marginLeft="@dimen/distancia_botao_largura"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade2" />

        <Button
            android:id="@+id/U3"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U1"
            android:layout_below="@+id/U1"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade3" />
        <Button
            android:id="@+id/U4"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U2"
            android:layout_below="@+id/U2"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade4" />
        
        <Button
            android:id="@+id/U6"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U3"
            android:layout_below="@+id/U3"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade6" />
        
        <Button
            android:id="@+id/U7"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U4"
            android:layout_below="@+id/U4"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade7" />
        
        <Button
            android:id="@+id/U8"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U6"
            android:layout_below="@+id/U6"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade8" />
        
        <Button
            android:id="@+id/U9"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U7"
            android:layout_below="@+id/U7"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade9" />
        
        <Button
            android:id="@+id/U10"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U8"
            android:layout_below="@+id/U8"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade10" />
        
        <Button
            android:id="@+id/U11"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U9"
            android:layout_below="@+id/U9"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade11" />
        
        <Button
            android:id="@+id/U12"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U10"
            android:layout_below="@+id/U10"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade12" />
        
        <Button
            android:id="@+id/U13"
            android:layout_width="@dimen/largura_botao"
            android:layout_height="@dimen/altura_botao"
            android:layout_alignLeft="@+id/U11"
            android:layout_below="@+id/U11"
            android:layout_marginTop="@dimen/distancia_botao_altura"
            android:background="@drawable/botao_seleciona_unidade_background"
            android:text="@string/unidade13" />

        
        
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/creditos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/creditos"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</LinearLayout>

</ScrollView>